--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2817,7 +2817,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #ed4933;
 			color: #c8ece9;
 		}
 
@@ -3610,7 +3610,7 @@ input, select, textarea {
 				-webkit-transition-delay: 0.25s;
 				-ms-transition-delay: 0.25s;
 				transition-delay: 0.25s;
-				background: #fff;
+				background: #ffffff;
 				content: '';
 				display: block;
 				height: 2px;
@@ -3694,7 +3694,7 @@ input, select, textarea {
 			-ms-transition-delay: 1.25s;
 			transition-delay: 1.25s;
 			content: '';
-			background: #2e3842;
+			background: #000000;
 			display: block;
 			width: 100%;
 			height: 100%;
