group address and add about us

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #2e3842;
+		background: #000000;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2489,6 +2489,7 @@ input, select, textarea {
 		.button.primary {
 			background-color: #ed4933;
 			box-shadow: none !important;
+			margin: 2em 0;
 			color: #ffffff !important;
 		}
 
@@ -3996,4 +3997,10 @@ input, select, textarea {
 
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
+	}
+
+	/** ADDITIONAL STYLES **/
+
+	#address {
+		margin: 0;
 	}
