--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3886,13 +3886,13 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		padding: 6em 0 4em 0 ;
-		background-color: #1d242a18;
+		padding: 0.5em 0 ;
+		background-color: #000000;
 		text-align: center;
 	}
 
 		#footer .icons {
-			font-size: 1.25em;
+			font-size: .75em;
 		}
 
 			#footer .icons a {
