--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3996,7 +3996,7 @@ input, select, textarea {
 	}
 
 	body.is-mobile.landing #footer {
-		background-color: #1d242a;
+		background-color: #000000;
 	}
 
 	/** ADDITIONAL STYLES **/
